# secretgate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: hardening.md  known-value-scanning.md  supported-patterns.md
scripts/: gap_analysis.py  setup.sh  with-secretgate.sh
src/secretgate/: __init__.py  __main__.py  certs.py  cli.py  config.py  firewall.py  forward.py  h2_handler.py  harden.py  packfile.py  pipeline.py  proxy.py  scan.py  server.py  signatures.yaml  sni.py  stats.py  steps.py
src/secretgate/secrets/: __init__.py  detect_secrets_adapter.py  known_values.py  redactor.py  scanner.py
tests/: test_auth_paths.py  test_certs.py  test_cli.py  test_cli_firewall.py  test_cli_wrap.py  test_config.py  test_detect_secrets_integration.py  test_firewall.py  test_forward_proxy.py  test_harden.py  test_known_values.py  test_new_patterns.py  test_packfile.py  test_pipeline.py  test_redactor.py  test_reverse_proxy.py  test_scan.py  test_scanner.py  test_server.py  test_sni.py  test_stats.py  test_status_cli.py  test_streaming_errors.py  test_version.py  test_websocket.py  test_wrap_logging.py
