[project]
name = "secretgate"
version = "0.5.1"
description = "Lean security proxy for AI coding tools — scan and redact secrets before they reach LLM APIs"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
keywords = ["security", "secrets", "proxy", "llm", "ai", "coding-assistant", "redaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "click>=8.1",
    "structlog>=24.0",
    "cryptography>=42.0",
    "certifi>=2024.0",
    "h11>=0.14",
]

[project.urls]
Homepage = "https://github.com/secretgate/secretgate"
Repository = "https://github.com/secretgate/secretgate"
Issues = "https://github.com/secretgate/secretgate/issues"

[project.optional-dependencies]
ahocorasick = [
    "pyahocorasick>=2.0",
]
detect-secrets = [
    "detect-secrets>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
    "detect-secrets>=1.4",
    "trustme>=1.1",
]

[project.scripts]
secretgate = "secretgate.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
secretgate = ["signatures.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
